catbox file hosting setting

--- a/public/404.html
+++ b/public/404.html
@@ -73,13 +73,13 @@ data-theme-mode="auto"
     <div id="wrap">
       <div id="header-nav">
   <nav id="main-nav"><span class="main-nav-link-wrap">
-        <div class='main-nav-icon icon '><img src="/images/flower.png" alt="home icon" class="" style="height: 1em;"></div>
+        <div class='main-nav-icon icon '><img src="/blog/images/flower.png" alt="home icon" class="" style="height: 1em;"></div>
         <a class="main-nav-link" href="/blog/">首页</a>
       </span><span class="main-nav-link-wrap">
-        <div class='main-nav-icon icon '><img src="/images/flower.png" alt="archives icon" class="" style="height: 1em;"></div>
+        <div class='main-nav-icon icon '><img src="/blog/images/flower.png" alt="archives icon" class="" style="height: 1em;"></div>
         <a class="main-nav-link" href="/blog/archives">归档</a>
       </span><span class="main-nav-link-wrap">
-        <div class='main-nav-icon icon '><img src="/images/flower.png" alt="about icon" class="" style="height: 1em;"></div>
+        <div class='main-nav-icon icon '><img src="/blog/images/flower.png" alt="about icon" class="" style="height: 1em;"></div>
         <a class="main-nav-link" href="/blog/about">关于</a>
       </span><a id="main-nav-toggle" class="nav-icon"></a>
   </nav>
