--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
     <div class="loading-left-bg loading-bg"></div>
     <div class="loading-right-bg loading-bg"></div>
     <div class="spinner-box">
-      <div class="loading-taichi rotate"><img src="/images/flower.png" alt="loading" /></div><div class="loading-word">努力奋斗中...</div>
+      <div class="loading-taichi rotate"><img src="/blog/images/flower.png" alt="loading" /></div><div class="loading-word">努力奋斗中...</div>
     </div>
   </div>
   </div>
@@ -110,13 +110,13 @@
 <div id="heatmap-tooltip"></div><div id="container">
       <div id="wrap"><div id="header-nav">
   <nav id="main-nav"><span class="main-nav-link-wrap">
-        <div class='main-nav-icon icon '><img src="/images/flower.png" alt="home icon" class="" style="height: 1em;"></div>
+        <div class='main-nav-icon icon '><img src="/blog/images/flower.png" alt="home icon" class="" style="height: 1em;"></div>
         <a class="main-nav-link" href="/blog/">首页</a>
       </span><span class="main-nav-link-wrap">
-        <div class='main-nav-icon icon '><img src="/images/flower.png" alt="archives icon" class="" style="height: 1em;"></div>
+        <div class='main-nav-icon icon '><img src="/blog/images/flower.png" alt="archives icon" class="" style="height: 1em;"></div>
         <a class="main-nav-link" href="/blog/archives">归档</a>
       </span><span class="main-nav-link-wrap">
-        <div class='main-nav-icon icon '><img src="/images/flower.png" alt="about icon" class="" style="height: 1em;"></div>
+        <div class='main-nav-icon icon '><img src="/blog/images/flower.png" alt="about icon" class="" style="height: 1em;"></div>
         <a class="main-nav-link" href="/blog/about">关于</a>
       </span><a id="main-nav-toggle" class="nav-icon"></a>
   </nav>
@@ -164,7 +164,7 @@
         href="/blog/"
         aria-label="首页"
       ></a>
-      <div class='sidebar-menu-icon icon '><img src="/images/flower.png" alt="home icon" class="" style="height: 1em;"></div>
+      <div class='sidebar-menu-icon icon '><img src="/blog/images/flower.png" alt="home icon" class="" style="height: 1em;"></div>
       <div class="sidebar-menu-link">首页</div>
     </div><div class="sidebar-menu-link-wrap">
       <a
@@ -172,7 +172,7 @@
         href="/blog/archives"
         aria-label="归档"
       ></a>
-      <div class='sidebar-menu-icon icon '><img src="/images/flower.png" alt="archives icon" class="" style="height: 1em;"></div>
+      <div class='sidebar-menu-icon icon '><img src="/blog/images/flower.png" alt="archives icon" class="" style="height: 1em;"></div>
       <div class="sidebar-menu-link">归档</div>
     </div><div class="sidebar-menu-link-wrap">
       <a
@@ -180,7 +180,7 @@
         href="/blog/about"
         aria-label="关于"
       ></a>
-      <div class='sidebar-menu-icon icon '><img src="/images/flower.png" alt="about icon" class="" style="height: 1em;"></div>
+      <div class='sidebar-menu-icon icon '><img src="/blog/images/flower.png" alt="about icon" class="" style="height: 1em;"></div>
       <div class="sidebar-menu-link">关于</div>
     </div></div>
 </div>
@@ -274,7 +274,7 @@
         post-cover-left
       "
     ><img
-            data-src="images/cover/bg4.png"
+            data-src="images/cover/bg1.png"
             data-sizes="auto"
             alt="Paper Earth"
             class="lazyload"
@@ -382,7 +382,7 @@
         href="/blog/"
         aria-label="首页"
       ></a>
-      <div class='sidebar-menu-icon icon '><img src="/images/flower.png" alt="home icon" class="" style="height: 1em;"></div>
+      <div class='sidebar-menu-icon icon '><img src="/blog/images/flower.png" alt="home icon" class="" style="height: 1em;"></div>
       <div class="sidebar-menu-link">首页</div>
     </div><div class="sidebar-menu-link-wrap">
       <a
@@ -390,7 +390,7 @@
         href="/blog/archives"
         aria-label="归档"
       ></a>
-      <div class='sidebar-menu-icon icon '><img src="/images/flower.png" alt="archives icon" class="" style="height: 1em;"></div>
+      <div class='sidebar-menu-icon icon '><img src="/blog/images/flower.png" alt="archives icon" class="" style="height: 1em;"></div>
       <div class="sidebar-menu-link">归档</div>
     </div><div class="sidebar-menu-link-wrap">
       <a
@@ -398,7 +398,7 @@
         href="/blog/about"
         aria-label="关于"
       ></a>
-      <div class='sidebar-menu-icon icon '><img src="/images/flower.png" alt="about icon" class="" style="height: 1em;"></div>
+      <div class='sidebar-menu-icon icon '><img src="/blog/images/flower.png" alt="about icon" class="" style="height: 1em;"></div>
       <div class="sidebar-menu-link">关于</div>
     </div></div>
 </div></nav>
