bunny hunter post

--- a/public/friend/index.html
+++ b/public/friend/index.html
@@ -143,7 +143,7 @@
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
-    <div>文章</div><div class="sidebar-state-number">3</div>
+    <div>文章</div><div class="sidebar-state-number">4</div>
   </div>
   <a class="sidebar-state-category" href="/blog/categories/" aria-label="sidebar-state-category-link">
     <div>分类</div>
@@ -153,7 +153,7 @@
   </a>
   <a class="sidebar-state-tag" href="/blog/tags/" aria-label="sidebar-state-tag-link">
     <div>标签</div>
-    <div class="sidebar-state-number">9</div>
+    <div class="sidebar-state-number">11</div>
   </a>
 </div>
 <div class="sidebar-social"></div>
@@ -206,9 +206,17 @@
       data-aos="fade-up"
     >
       <div style="display: flex; justify-content: space-between;">
-        <h3 class="widget-title">标签</h3></div>
+        <h3 class="widget-title">标签</h3><a class="widget-link" href="/blog/tags/">查看更多</a></div>
       <div class="widget">
         <ul class="tag-list" itemprop="keywords"><li class="tag-item">
+                <a
+                  class="tag-link"
+                  href="/blog/tags/2d%E5%B0%84%E5%87%BB/"
+                  aria-label="标签: 2D射击"
+                >
+                  2D射击
+                </a>
+              </li><li class="tag-item">
                 <a
                   class="tag-link"
                   href="/blog/tags/2d%E6%A8%AA%E7%89%88/"
@@ -243,6 +251,14 @@
               </li><li class="tag-item">
                 <a
                   class="tag-link"
+                  href="/blog/tags/unity/"
+                  aria-label="标签: Unity"
+                >
+                  Unity
+                </a>
+              </li><li class="tag-item">
+                <a
+                  class="tag-link"
                   href="/blog/tags/unrealengine4/"
                   aria-label="标签: UnrealEngine4"
                 >
@@ -272,14 +288,6 @@
                 >
                   网页应用
                 </a>
-              </li><li class="tag-item">
-                <a
-                  class="tag-link"
-                  href="/blog/tags/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9B%BE%E5%BD%A2%E5%AD%A6/"
-                  aria-label="标签: 计算机图形学"
-                >
-                  计算机图形学
-                </a>
               </li></ul>
       </div>
     </div>
@@ -289,6 +297,11 @@
     data-aos="fade-up"
   >
     <h3 class="widget-title">标签云</h3><div class="widget tagcloud"><a
+            style="font-size:10px"
+            href="/blog/tags/2d%E5%B0%84%E5%87%BB/"
+            aria-label="标签: 2D射击"
+            >2D射击</a
+          ><a
             style="font-size:10px"
             href="/blog/tags/2d%E6%A8%AA%E7%89%88/"
             aria-label="标签: 2d横版"
@@ -308,6 +321,11 @@
             href="/blog/tags/python/"
             aria-label="标签: Python"
             >Python</a
+          ><a
+            style="font-size:10px"
+            href="/blog/tags/unity/"
+            aria-label="标签: Unity"
+            >Unity</a
           ><a
             style="font-size:10px"
             href="/blog/tags/unrealengine4/"
@@ -346,6 +364,8 @@
               <a href="/blog/post/polygon_complexity_system/">多边形复杂度系统</a>
             </li><li>
               <a href="/blog/post/mocappobia/">Mocappobia</a>
+            </li><li>
+              <a href="/blog/post/bunny_hunter/">Bunny Hunter</a>
             </li><li>
               <a href="/blog/post/paper_earth/">Paper Earth</a>
             </li></ul>
@@ -464,10 +484,10 @@
         >
       </div><div>
         <span class="icon-brush"
-          >&nbsp;4.8k</span
+          >&nbsp;4.9k</span
         >
         &nbsp;|&nbsp;
-        <span class="icon-coffee">&nbsp;00:11</span>
+        <span class="icon-coffee">&nbsp;00:12</span>
       </div><div>
         <span class="icon-eye"></span>
         <span id="busuanzi_container_site_pv"
@@ -501,7 +521,7 @@
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
-    <div>文章</div><div class="sidebar-state-number">3</div>
+    <div>文章</div><div class="sidebar-state-number">4</div>
   </div>
   <a class="sidebar-state-category" href="/blog/categories/" aria-label="sidebar-state-category-link">
     <div>分类</div>
@@ -511,7 +531,7 @@
   </a>
   <a class="sidebar-state-tag" href="/blog/tags/" aria-label="sidebar-state-tag-link">
     <div>标签</div>
-    <div class="sidebar-state-number">9</div>
+    <div class="sidebar-state-number">11</div>
   </a>
 </div>
 <div class="sidebar-social"></div>
