--- a/public/about/index.html
+++ b/public/about/index.html
@@ -133,7 +133,7 @@
       data-aos="fade-up"
     ><div class="sidebar-author">
   <img
-    data-src="/blog/avatar/avatar.webp"
+    data-src="/blog/avatar/avatar.jpeg"
     data-sizes="auto"
     alt="东水"
     class="lazyload"
@@ -447,7 +447,7 @@
       </div><nav id="mobile-nav">
   <div class="sidebar-wrap"><div class="sidebar-author">
   <img
-    data-src="/blog/avatar/avatar.webp"
+    data-src="/blog/avatar/avatar.jpeg"
     data-sizes="auto"
     alt="东水"
     class="lazyload"
