--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
       data-aos="fade-up"
     ><div class="sidebar-author">
   <img
-    data-src="/blog/avatar/avatar.webp"
+    data-src="/blog/avatar/avatar.jpeg"
     data-sizes="auto"
     alt="东水"
     class="lazyload"
@@ -389,7 +389,7 @@
         post-cover-left
       "
     ><img
-            data-src="/blog/images/cover/bg8.png"
+            data-src="/blog/images/cover/bg5.png"
             data-sizes="auto"
             alt="多边形复杂度系统"
             class="lazyload"
@@ -435,7 +435,7 @@
         post-cover-right
       "
     ><img
-            data-src="/blog/images/cover/bg4.png"
+            data-src="/blog/images/cover/bg3.png"
             data-sizes="auto"
             alt="Mocappobia"
             class="lazyload"
@@ -479,7 +479,7 @@
         post-cover-left
       "
     ><img
-            data-src="/blog/images/cover/bg7.png"
+            data-src="/blog/images/cover/bg8.png"
             data-sizes="auto"
             alt="Bunny Hunter"
             class="lazyload"
@@ -525,7 +525,7 @@
         post-cover-right
       "
     ><img
-            data-src="/blog/images/cover/bg4.png"
+            data-src="/blog/images/cover/bg7.png"
             data-sizes="auto"
             alt="Paper Earth"
             class="lazyload"
@@ -603,7 +603,7 @@
       </div><nav id="mobile-nav">
   <div class="sidebar-wrap"><div class="sidebar-author">
   <img
-    data-src="/blog/avatar/avatar.webp"
+    data-src="/blog/avatar/avatar.jpeg"
     data-sizes="auto"
     alt="东水"
     class="lazyload"
